# PSyTran

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  set_default_config.sh  setup.cfg  setup.py
.github/workflows/: test_suite.yml  test_suite_lfric_psyclone.yml  test_suite_main.yml  test_suite_psyclone_v3.1.0.yml  upstream_main.yml
demos/: 01_psyclone.py  02_kernels.py  03_loop.py  04_collapse.py  Makefile  demo1_psyclone.py  demo1_psyclone.sh  demo2_kernels.py  demo2_kernels.sh  demo3_loop.py  demo3_loop.sh  demo4_collapse.py  demo4_collapse.sh
demos/fortran/: double_loop.F90  empty.F90  single_loop.F90
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/demos/: demo1_psyclone.py  demo1_psyclone.py.rst  demo1_psyclone.sh  demo2_kernels.py  demo2_kernels.py.rst  demo2_kernels.sh  demo3_loop.py  demo3_loop.py.rst  demo3_loop.sh  demo4_collapse.py.rst  demo4_collapse.sh
docs/source/demos/fortran/: double_loop.F90  empty.F90  single_loop.F90
psyacc/: assignment.py  clauses.py  convert.py  directives.py  family.py  loop.py  types.py
psytran/: __init__.py  clauses.py  convert.py  directives.py  family.py  loop.py  prop_trans.py  transmute_cpu.py  transmute_rules.py
test/: code_snippets.py  conftest.py  test_assignment.py  test_clauses.py  test_convert.py  test_directives.py  test_family.py  test_loop.py  utils.py
